# AURACAD

./: .gitignore  Dockerfile  README.md  rebrand.ps1
.github/workflows/: build.yml
src/: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  SECURITY.md
src/cMake/FreeCAD_Helpers/: CMakeLists.txt  README.md
src/contrib/debugger/: qt_pretty_printers_gdb.py  qt_pretty_printers_lldb.py
src/data/examples/: CMakeLists.txt
src/data/tests/: Crank.py
src/package/WindowsInstaller/: README.md  write_version_nsh.py
src/package/scripts/: write_version_info.py
src/src/: FCConfig.h  FCGlobal.h
src/src/App/: Annotation.cpp  Annotation.h  Application.cpp  Application.h  ApplicationDirectories.cpp  ApplicationDirectories.h  ApplicationDirectoriesPyImp.cpp  ApplicationPy.cpp  ApplicationPy.h  AutoTransaction.cpp  AutoTransaction.h  BackupPolicy.cpp  BackupPolicy.h  Branding.cpp  Branding.h  CMakeLists.txt  CleanupProcess.cpp  CleanupProcess.h  ColorModel.cpp  ColorModel.h  ComplexGeoData.cpp  ComplexGeoData.h  ComplexGeoDataPyImp.cpp  ConsoleQtBridge.cpp  Datums.cpp  Datums.h  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectExtension.cpp  DocumentObjectExtension.h  DocumentObjectExtensionPyImp.cpp  DocumentObjectFileIncluded.cpp  DocumentObjectFileIncluded.h  DocumentObjectGroup.cpp  DocumentObjectGroup.h  DocumentObjectGroupPyImp.cpp  DocumentObjectPyImp.cpp  DocumentObserver.cpp  (+136 more)
src/src/App/private/: DocumentP.h
src/src/Base/: Axis.cpp  Axis.h  AxisPyImp.cpp  Base64.cpp  Base64.h  Base64Filter.h  BaseClass.cpp  BaseClass.h  BaseClassPyImp.cpp  BindingManager.cpp  BindingManager.h  Bitmask.h  BoundBox.h  BoundBoxPyImp.cpp  Builder3D.cpp  Builder3D.h  CMakeLists.txt  Color.cpp  Color.h  Console.cpp  Console.h  ConsoleObserver.cpp  ConsoleObserver.h  Converter.h  CoordinateSystem.cpp  CoordinateSystem.h  CoordinateSystemPyImp.cpp  Debugger.h  DualNumber.h  DualQuaternion.cpp  DualQuaternion.h  Exception.cpp  Exception.h  ExceptionFactory.cpp  ExceptionFactory.h  Factory.cpp  Factory.h  FileInfo.cpp  FileInfo.h  FileLock.cpp  (+106 more)
src/src/Doc/: BuildDevDoc.cfg.in  BuildDocDoxy.cfg  BuildDocDoxy.cfg.in  BuildDocDoxyFull.cfg  BuildWebDoc.cfg.in  CMakeLists.txt  mainpage.dox.in
src/src/Ext/: CMakeLists.txt
src/src/Ext/freecad/: CMakeLists.txt  UiTools.py  freecad_doc.py  module_io.py  project_utility.py  utils.py  utils_zip.py
src/src/Gui/: Action.cpp  Action.h  ActionFunction.cpp  ActionFunction.h  ActiveObjectList.cpp  ActiveObjectList.h  (+413 more)
src/src/Gui/PreferencePacks/: CMakeLists.txt  package.xml
src/src/Gui/PreferencePacks/Dark behave/: Dark behave.cfg
src/src/Gui/PreferencePacks/FreeCAD Classic/: FreeCAD Classic.cfg
src/src/Gui/PreferencePacks/FreeCAD Dark/: FreeCAD Dark.cfg
src/src/Gui/PreferencePacks/FreeCAD Light/: FreeCAD Light.cfg
src/src/Main/: CMakeLists.txt  FreeCADGuiPy.cpp  MainCmd.cpp  MainGui.cpp  MainPy.cpp
src/src/Mod/Material/: CMakeLists.txt  Init.py  InitGui.py  MaterialEditor.py  MaterialGlobal.h  TestMaterialsApp.py  TestMaterialsGui.py  importFCMat.py
src/src/Mod/Material/App/: AppMaterial.cpp  Array2DPyImp.cpp  Array3DPyImp.cpp  CMakeLists.txt  Exceptions.cpp  Exceptions.h  ExternalManager.cpp  ExternalManager.h  FolderTree.h  Library.cpp  Library.h  MaterialConfigLoader.cpp  MaterialConfigLoader.h  MaterialFilter.cpp  MaterialFilter.h  MaterialFilterOptionsPyImp.cpp  MaterialFilterPyImp.cpp  MaterialLibrary.cpp  MaterialLibrary.h  MaterialLibraryPyImp.cpp  MaterialLoader.cpp  MaterialLoader.h  MaterialManager.cpp  MaterialManager.h  MaterialManagerExternal.cpp  MaterialManagerExternal.h  MaterialManagerLocal.cpp  MaterialManagerLocal.h  MaterialManagerPyImp.cpp  MaterialPropertyPyImp.cpp  MaterialPyImp.cpp  MaterialValue.cpp  MaterialValue.h  Materials.cpp  Materials.h  Model.cpp  Model.h  ModelLibrary.cpp  ModelLibrary.h  ModelLoader.cpp  (+19 more)
src/src/Mod/Material/Gui/: AppMatGui.cpp  AppearancePreview.cpp  AppearancePreview.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  ArrayDelegate.cpp  ArrayDelegate.h  ArrayModel.cpp  ArrayModel.h  BaseDelegate.cpp  BaseDelegate.h  CMakeLists.txt  Command.cpp  DlgDisplayPropertiesImp.cpp  DlgDisplayPropertiesImp.h  DlgInspectAppearance.cpp  DlgInspectAppearance.h  DlgInspectMaterial.cpp  DlgInspectMaterial.h  DlgMaterialImp.cpp  DlgMaterialImp.h  DlgSettingsDefaultMaterial.cpp  DlgSettingsDefaultMaterial.h  DlgSettingsExternal.cpp  DlgSettingsExternal.h  DlgSettingsExternal.ui  DlgSettingsMaterial.cpp  DlgSettingsMaterial.h  DlgSettingsMaterial.ui  ImageEdit.cpp  ImageEdit.h  ListDelegate.cpp  ListDelegate.h  ListEdit.cpp  ListEdit.h  ListModel.cpp  ListModel.h  MaterialDelegate.cpp  (+19 more)
src/src/Mod/Material/Gui/Resources/translations/: Material.ts  Material_be.ts  Material_ca.ts  Material_cs.ts  Material_da.ts  Material_de.ts  Material_el.ts  Material_es-AR.ts  Material_es-ES.ts  Material_eu.ts  Material_fi.ts  Material_fr.ts  Material_ga-IE.ts  Material_hr.ts  Material_hu.ts  Material_it.ts  Material_ja.ts  Material_ka.ts  Material_ko.ts  Material_lt.ts  Material_ms.ts  Material_nl.ts  Material_pl.ts  Material_pt-BR.ts  Material_pt-PT.ts  Material_ro.ts  Material_ru.ts  Material_sl.ts  Material_sr-CS.ts  Material_sr.ts  Material_sv.ts  Material_ta.ts  Material_tr.ts  Material_uk.ts  Material_val-ES.ts  Material_zh-CN.ts  Material_zh-TW.ts
src/src/Mod/Material/materialtests/: TestMaterialCreation.py  TestMaterialDocument.py  TestMaterialFilter.py  TestMaterials.py  TestModels.py
src/src/Mod/Material/materialtools/: MaterialModels.py  cardutils.py
src/src/Mod/Material/materialtools/Tools/: ConvertFCMat.py
src/src/Tools/embedded/Qt/cxx/: CMakeLists.txt  PreCompiled.h  main.cpp  plugin.cpp
src/src/Tools/plugins/widget/: CMakeLists.txt  customwidgets.cpp  customwidgets.h  plugin.cpp  plugin.h  wizard.cpp  wizard.h
src/src/XDGData/: CMakeLists.txt  FreeCAD.thumbnailer.in  org.freecad.FreeCAD.metainfo.xml.in  org.freecad.FreeCAD.xml
src/tests/: CMakeLists.txt
src/tests/src/Mod/PartDesign/App/: BackwardCompatibility.cpp  CMakeLists.txt
(+5026 files in other folders)
